cluster/tekton-dashboard-exposed.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tekton-dashboard
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: default
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/part-of: tekton-dashboard
    app.kubernetes.io/version: v0.11.1
    dashboard.tekton.dev/release: v0.11.1
    version: v0.11.1
  name: tekton-dashboard-exposed
  namespace: tekton-pipelines
spec:
  type: NodePort
  ports:
    - name: http
      port: 9097
      protocol: TCP
      targetPort: 9097
      nodePort: 30200
  selector:
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: default
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/part-of: tekton-dashboard
