cluster/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard-ingress
  namespace: tekton-pipelines
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /td # tekton dashboard
            pathType: Prefix
            backend:
              service:
                name: tekton-dashboard
                port:
                  number: 9097
